--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -91,9 +91,16 @@
               <mat-list role="list">
                 <mat-list-item role="listitem">
                   <span> Categorias: </span>
-                  <span>
-                    {{product.categories[0].name }}
-                  </span>
+                    <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
+                      <mat-chip
+                        *ngFor="let category of product.categories"
+                        (removed)="removeCategory(product,category)">
+                        {{category.name}}
+                        <button matChipRemove>
+                          <mat-icon>cancel</mat-icon>
+                        </button>
+                      </mat-chip>
+                    </mat-chip-list>
                 </mat-list-item>
               </mat-list>
             </div>
