sign in remove useless buttons

--- a/src/app/features/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.html
@@ -28,7 +28,7 @@
         (click)="authService.signIn(userName.value, userPassword.value)"
       />
     </div>
-    <div class="formGroup">
+<!--     <div class="formGroup">
       <span class="or"><span class="orInner">Or</span></span>
     </div>
 
@@ -40,7 +40,6 @@
     <span
       >Don't have an account?<button class="redirect" routerLink="/sign-up">
         Sign Up
-      </button></span
-    >
-  </div>
+      </button></span>
+  </div> -->
 </div>
