--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
@@ -1,7 +1,22 @@
 .nameShop{
   font-weight: bold;
+  font-size: 20px;
 }
 
-.closeButton{
-  margin-right: 0px;
+.divShop{
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.divStock{
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+
+button{
+  margin: 10px;
+  height: auto;
 }
