--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -30,7 +30,7 @@
                   <div class="expansionContent">
                     <span> Nombre: {{ shop.name }} </span>
                     <span> Direccion: {{ shop.address.street }} </span>
-                    <button mat-raised-button color = "accent" (click) = "openProductList(shop.name)">Ver productos</button>
+                    <button mat-raised-button color = "accent" (click) = "openProductList(shop)">Ver productos</button>
                   </div>
                 </mat-list-item>
                 <br>
