--- a/src/app/features/category/components/categories/categories.component.scss
+++ b/src/app/features/category/components/categories/categories.component.scss
@@ -1,4 +1,4 @@
-.categoriaItem{
+.cateogoryItem{
   display: flex;
   padding: 5px;
   width: 100%;
@@ -16,7 +16,7 @@
   word-wrap: break-word;
 }
 
-.form-category{
+.categoryForm{
   margin-left: 50px;
 }
 
@@ -35,10 +35,12 @@
   justify-content: right;
 }
 
-.botonProd{
+.prodButton{
   margin: 1em;
   margin-left: 0 auto;
   flex: 1 1 auto;
+  background-color: #3F51B5;
+  color: white;
 }
 
 .expansionContent{
