Create SnackBar Component (used in guard)

--- a/src/app/features/authentication/components/sign-in-sidebar/sign-in-sidebar.component.html
+++ b/src/app/features/authentication/components/sign-in-sidebar/sign-in-sidebar.component.html
@@ -6,7 +6,7 @@
     aria-label="Go to user"
     (click)="signIn()"
   >
-    Iniciar sesión
+    Log in
   </button>
 </div>
 
@@ -18,6 +18,6 @@
     color="warn"
     (click)="signOut()"
   >
-    Cerrar sesión
+    Log out
   </button>
 </ng-template>
