--- a/src/app/features/product/components/product/product.component.scss
+++ b/src/app/features/product/components/product/product.component.scss
@@ -44,6 +44,8 @@ mat-form-field{
 .botonAnadir{
   width: 30%;
   padding: 0.7em;
+  background-color: #3F51B5;
+  color: white;
 }
 
 .segundaCol{
@@ -92,4 +94,12 @@ img{
 }
 .category-list {
   width: 100%;
+  background-color: #3F51B5;
+  color: white;
 }
+
+.removeButton{
+  color: white;
+  background-color: #3F51B5;
+}
+
