--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -28,9 +28,9 @@
                 <br>
                 <mat-list-item role="listitem">
                   <div class="expansionContent">
-                    <span> Nombre: {{ shop.name }} </span>
-                    <span> Direccion: {{ shop.address.street }} </span>
-                    <button mat-raised-button color = "accent" (click) = "openProductList(shop.name)">Ver productos</button>
+                    <span> Name: {{ shop.name }} </span>
+                    <span> Adress: {{ shop.address.street }} </span>
+                    <button mat-raised-button class="viewProducts" color = "accent" (click) = "openProductList(shop.name)">View products</button>
                   </div>
                 </mat-list-item>
                 <br>
