--- a/src/app/features/shop/components/shops-list/shops-list.component.scss
+++ b/src/app/features/shop/components/shops-list/shops-list.component.scss
@@ -42,8 +42,15 @@ table{
   margin: 1em;
   margin-left: 0 auto;
   flex: 1 1 auto;
+  background-color: #3F51B5;
+  color: white;
 }
 
 .listShop{
   margin: 2em;
+}
+
+.viewProducts{
+  background-color: #3F51B5;
+  color: white;
 }
