--- a/src/app/shared/components/home/home.component.scss
+++ b/src/app/shared/components/home/home.component.scss
@@ -6,8 +6,10 @@
 .sidebar-content {
   display: flex;
   height: 100%;
-  /* align-items: center;
-  justify-content: center; */
+  width: 100%;
+  // align-items: center;
+  // justify-content: center;
+
 }
 
 .sidebar {
