--- a/src/app/features/authentication/components/sign-in/sign-in.component.scss
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.scss
@@ -1,3 +1,14 @@
 .signInContainer{
   margin: 20px;
 }
+form{
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f4f4;
+  padding: 25px;
+}
+
+.titulo{
+  font-size: x-large;
+  margin-bottom: 10px;
+}
