--- a/src/app/features/authentication/components/sign-in/sign-in.component.html
+++ b/src/app/features/authentication/components/sign-in/sign-in.component.html
@@ -4,12 +4,12 @@
     <mat-form-field>
       <mat-label>User</mat-label>
       <input type="text" matInput formControlName="userName" />
-      <mat-error>Campo obligatorio</mat-error>
+      <mat-error>Invalid field</mat-error>
     </mat-form-field>
     <mat-form-field>
       <mat-label>Password</mat-label>
       <input type="password" matInput formControlName="userPassword" />
-      <mat-error>Campo obligatorio</mat-error>
+      <mat-error>Invalid field</mat-error>
     </mat-form-field>
     <button mat-raised-button color="primary" (click)="logIn()">Log in</button>
   </form>
