--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -1,3 +1,4 @@
+<div class="formContainer">
 <mat-accordion>
   <mat-expansion-panel
     (opened)="panelOpenState = true"
@@ -45,6 +46,7 @@
     </form>
   </mat-expansion-panel>
 </mat-accordion>
+</div>
 
 <mat-list role="list" class="listCategory">
   <mat-divider></mat-divider>
