--- a/src/app/features/user/components/form-user/form-user.component.html
+++ b/src/app/features/user/components/form-user/form-user.component.html
@@ -1,3 +1,4 @@
+<div class="formUser">
 <mat-accordion>
   <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
@@ -36,4 +37,5 @@
     </form>
   </mat-expansion-panel>
 </mat-accordion>
+</div>
 <app-list-user></app-list-user>
