--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,8 +6,7 @@
 .sidebar-content {
     display: flex;
     height: 100%;
-    /* align-items: center;
-    justify-content: center; */
+    width: 100%;
 }
 
 .sidebar {
