--- a/src/app/features/category/components/categories/categories.component.scss
+++ b/src/app/features/category/components/categories/categories.component.scss
@@ -16,8 +16,9 @@
   word-wrap: break-word;
 }
 
-.categoryForm{
-  margin-left: 50px;
+.formContainer {
+  width: 100%;
+  padding: 5px;
 }
 
 .category{
