--- a/src/app/features/user/components/form-user/form-user.component.scss
+++ b/src/app/features/user/components/form-user/form-user.component.scss
@@ -1,7 +1,15 @@
 .user-container {
-    padding: 20px;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
 }
 
-.surname, .password{
+.surname,
+.password {
   margin-left: 10px;
+}
+
+.formUser {
+  width: 100%;
+  padding: 5px;
 }
