--- a/src/app/features/user/components/list-user/list-user.component.scss
+++ b/src/app/features/user/components/list-user/list-user.component.scss
@@ -39,7 +39,7 @@ mat-divider {
   margin-left: 0 auto;
   flex: 1 1 auto;
   color: white;
-  background-color: #3F51B5;
+  background-color: #3f51b5;
 }
 
 .user {
