Se arregla que el formulario de inciar sesión no saliera centrado y que las paginas no ocupasen todo el espacio disponible

--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -6,7 +6,7 @@
     <app-sidebar></app-sidebar>
   </mat-drawer>
 
-  <mat-drawer-content class="sidebar-content">
+  <mat-drawer-content>
     <router-outlet></router-outlet>
   </mat-drawer-content>
 
