--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
@@ -9,6 +9,14 @@
   margin: 10px;
 }
 
+.divImage{
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  width: 100px;
+  height: auto;
+}
+
 .divStock{
   display: flex;
   flex-direction: row;
@@ -16,7 +24,12 @@
   align-items: center;
 }
 
-button{
+.stockButton{
   margin: 10px;
   height: auto;
+  width: 200px;
+}
+
+.stockInput{
+  min-width: 20px;
 }
